# Ehrenreich-Collection-Segmenter

./: .gitignore  README.md  pyproject.toml
app/: main.py  run.py
app/constants/: colors.py  naxos.py  novelty_curve_code.py  parameters.py  paths.py  segmenter_configurations.py  svg.py
app/controllers/: __init__.py  audio_c.py  multi_threading.py
app/controllers/starting_page/: audio_controller.py  main_window_controller.py  navigation_controller.py
app/models/: __init__.py  audio_m.py
app/models/starting_page/: audio_service.py  file_service.py  main_window_model.py  waveform_model.py
app/src/audio/: audio_file.py  signal.py
app/src/audio_features/: aligners.py  builders.py  features.py
app/src/interfaces/: builder.py  feature.py
app/src/io/: audio_cache.py  session_cache.py  ts_annotation.py
app/src/metrics/: metrics.py
app/src/naxos/: exceptions.py  scraper.py
app/src/utils/: Time.py  colors.py  text_formatter.py
app/styles/: theme.py
app/views/: __init__.py  loading_dialog.py
app/views/analysis_page/: main_window.py
app/views/starting_page/: main_window.py  waveform_widget.py
deployment/: build_macos.sh  build_windows.bat  ehrenreich_segmenter_macos.spec  ehrenreich_segmenter_windows.spec
optimization/: .gitignore
optimization/nc_combination_optimization/: combination.py  run.py
optimization/params_optimization/: run.py  segmentation.py
optimization/params_optimization/preprocessing/: create_datasets.py  merge_datasets.py
optimization/silence_optimization/: run.py  segmentation.py
(+31 files in other folders)
