[project]
name = "ehrenreich-collection-semester-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dtaidistance>=2.3.13",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "ijson>=3.4.0.post0",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.0.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "music21>=9.9.1",
    "musical-scales>=2.0.0",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pip>=25.2",
    "plotly>=6.5.0",
    "pretty-midi>=0.2.11",
    "pyinstaller>=6.18.0",
    "pyqt6>=6.10.0",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "tinytag>=2.1.2",
    "webdriver-manager>=4.0.2",
]
[tool.ruff]
select = ["F401"]
fix = true

